--- a/package.xml
+++ b/package.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0"?>
 <package format="2">
-  <name>my_sprk_swarm</name>
+  <name>sphero_swarm</name>
   <version>0.0.0</version>
-  <description>The my_sprk_swarm package</description>
+  <description>The sphero_swarm package</description>
 
   <!-- One maintainer tag required, multiple allowed, one person per tag -->
   <!-- Example:  -->
   <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
-  <maintainer email="ignited@todo.todo">ignited</maintainer>
+  <maintainer email="anaam.mostafiz@gmail.com">ignited</maintainer>
 
 
   <!-- One license tag required, multiple allowed, one license per tag -->
@@ -19,7 +19,7 @@
   <!-- Url tags are optional, but multiple are allowed, one per tag -->
   <!-- Optional attribute type can be: website, bugtracker, or repository -->
   <!-- Example: -->
-  <!-- <url type="website">http://wiki.ros.org/my_sprk_swarm</url> -->
+  <!-- <url type="website">http://wiki.ros.org/sphero_swarm</url> -->
 
 
   <!-- Author tags are optional, multiple are allowed, one per tag -->
