--- a/package.xml
+++ b/package.xml
@@ -56,6 +56,7 @@
   <build_depend>gazebo_ros</build_depend>
   <build_depend>gazebo_plugins</build_depend>
   <build_depend>roscpp</build_depend>
+  <build_depend>message_generation</build_depend>
   <build_export_depend>rospy</build_export_depend>
   <build_export_depend>std_msgs</build_export_depend>
   <build_export_depend>urdf</build_export_depend>
@@ -63,6 +64,7 @@
   <build_export_depend>gazebo_plugins</build_export_depend>
   <build_export_depend>gazebo_ros</build_export_depend>
   <build_export_depend>roscpp</build_export_depend>
+  <build_export_depend>message_generation</build_export_depend>
   <exec_depend>rospy</exec_depend>
   <exec_depend>std_msgs</exec_depend>
   <exec_depend>urdf</exec_depend>
@@ -70,6 +72,7 @@
   <exec_depend>gazebo_plugins</exec_depend>
   <exec_depend>gazebo_ros</exec_depend>
   <exec_depend>roscpp</exec_depend>
+  <exec_depend>message_runtime</exec_depend>
 
 
   <!-- The export tag contains other, unspecified, tags -->
