added depth sensing object detection and gazebo depth sensor

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -58,6 +58,8 @@ find_package(catkin REQUIRED COMPONENTS
 add_message_files(
   FILES
   TargetColorInfo.msg
+  ObjectVertices.msg
+  ObjsAndVerts.msg
 )
 
 ## Generate services in the 'srv' folder
@@ -78,6 +80,7 @@ add_message_files(
 generate_messages(
   DEPENDENCIES
   std_msgs
+  geometry_msgs
 )
 
 ################################################
